--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-suspense-render-hook",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "React Suspense Render Hook: This hook allows you to declaratively define components that render when asynchronous data is processed.",
-  "main": "./bin/index.js",
+  "main": "./src/index.ts",
   "scripts": {
     "eslint": "eslint '{src,pages}/**/*.{ts,tsx}'",
     "eslint:fix": "eslint '{src,pages}/**/*.{ts,tsx}' --fix",
