--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,11 @@
     "noEmit": false,
     "outDir": "bin",
     "esModuleInterop": true,
-    "module": "CommonJS",
+    "module": "ESNext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "declaration": true
   },
