--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-suspense-render-hook",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "description": "React Suspense Render Hook: This hook allows you to declaratively define components that render when asynchronous data is processed.",
   "main": "bin/index.js",
   "types": "bin/index.d.ts",
@@ -8,7 +8,8 @@
     "eslint": "eslint '{src,pages}/**/*.{ts,tsx}'",
     "eslint:fix": "eslint '{src,pages}/**/*.{ts,tsx}' --fix",
     "build": "rm -rf ./bin && webpack --config ./webpack.config.js",
-    "deploy": "npm run build && npm publish --access=public"
+    "deploy": "npm run build && npm publish --access=public",
+    "test": "jest"
   },
   "author": "Yongwoo Jung<stegano@naver.com>",
   "license": "MIT",
@@ -27,7 +28,9 @@
     "use"
   ],
   "devDependencies": {
+    "@types/jest": "^29.5.7",
     "@types/react": "^18.2.21",
+    "@types/react-test-renderer": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "eslint": "^8.48.0",
@@ -38,7 +41,11 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-storybook": "^0.6.13",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "jest": "^29.7.0",
     "prettier": "^3.0.3",
+    "react-hooks": "^1.0.1",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
