--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-suspense-render-hook",
-  "version": "2.1.4",
+  "version": "2.1.5-alpha.1",
   "description": "React Suspense Render Hook: This hook allows you to declaratively define components that render when asynchronous data is processed.",
   "main": "bin/index.js",
   "types": "bin/index.d.ts",
